blurred bg image fix, propped mg img

--- a/src/pages/content.css
+++ b/src/pages/content.css
@@ -4,6 +4,12 @@
     text-align: center;
 }
 
+.left-content-col, .right-content-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+}
+
 .content-header {
     text-align: center;
 }
