--- a/src/pages/navbar.css
+++ b/src/pages/navbar.css
@@ -6,6 +6,7 @@
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 10;
 }
 
 .navbar ul {
@@ -28,4 +29,8 @@
 
 .navbar ul li:hover {
     background-color: #CEC3FA;
+}
+
+.hidden-element {
+    padding-top: 110px;
 }
