--- a/src/pages/slide.css
+++ b/src/pages/slide.css
@@ -3,39 +3,43 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(66,65,110,1) 35%, rgba(26,61,68,1) 100%); */
     
     position: relative;
-    background-image: url("https://www.hollywoodreporter.com/wp-content/uploads/2022/07/Oppenheimer-Movie-Poster-Universal-Publicity-EMBED-2022-.jpg?w=1000");
+    /* background-image: url("https://www.hollywoodreporter.com/wp-content/uploads/2022/07/Oppenheimer-Movie-Poster-Universal-Publicity-EMBED-2022-.jpg?w=1000"); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 80vh;
     width: 100%;
+    overflow: hidden;
 }
 
-/* .bg-image {
-    background-image: url("https://www.hollywoodreporter.com/wp-content/uploads/2022/07/Oppenheimer-Movie-Poster-Universal-Publicity-EMBED-2022-.jpg?w=1000");
-    box-sizing: border-box;
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
+.bg-image img {
+    /* background-image: url("https://www.hollywoodreporter.com/wp-content/uploads/2022/07/Oppenheimer-Movie-Poster-Universal-Publicity-EMBED-2022-.jpg?w=1000"); */
     position: relative;
+    filter: blur(5px);
+    z-index: -1;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1;
+    height: 80vh;
+    width: 100%;
+    object-fit: cover;
     transform: scale(1.1);
-} */
+}
 
 
 .slide-image {
-    z-index: 2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2; 
     display: block;
-    max-width: 25%;
+    max-width: 100%;
     height: 100%;
     margin: auto;
     box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     background-color: rgba(255, 255, 255, 0.2);
-    width: 100%;
+    object-fit: cover;
 }
